--- a/styles.css
+++ b/styles.css
@@ -487,16 +487,20 @@ body.dark-mode .footer-bottom {
     /*}*/
     .content-section {
         text-align: center; /* Center content on smaller screens */
+        flex-direction: column;
+        padding: 30px;
     }
     .content-section img {
         margin-bottom: 20px; /* Add margin below images */
-        height: 500px;
-        border-radius: 8px;
-        object-fit: cover;
     }
-	footer {
-		margin-right: -20px;
-	}
+    .section-image {
+        order: 2 !important;
+        max-width: 100% !important;
+        margin-bottom: 20px;
+    }
+    footer {
+	margin-right: -20px;
+    }
     .footer-column {
         float: none;
         width: 100%;
