--- a/styles.css
+++ b/styles.css
@@ -458,7 +458,7 @@ body.dark-mode .footer-bottom {
 	
     .hero {
         display: flex;
-		background: url('hero.jpg') no-repeat center center;
+		background: fixed url('hero.jpg') no-repeat center center;
         background-size: cover;
         height: 95vh;
         width: 100%;
@@ -543,7 +543,7 @@ body.dark-mode .footer-bottom {
 	
     .hero {
         display: flex;
-        background: url('hero.jpg') no-repeat center center;
+        background: fixed url('hero.jpg') no-repeat center center;
         background-size: cover;
         height: 100vh;
         width: 100%;
@@ -594,7 +594,7 @@ body.dark-mode .footer-bottom {
 @media only screen and (min-width: 1024px) {
     .hero {
         display: flex;
-		background: url('hero.jpg') no-repeat center center;
+		background: fixed url('hero.jpg') no-repeat center center;
         background-size: cover;
         height: 95vh;
         width: 100%;
